# progetto-palazzo-davide-zanella

./: CMakeLists.txt  Palazzo.cpp  Palazzo.h  Palazzo2.cpp  Palazzo2.h  Pavimento.cpp  Pavimento.h  README.md~  Stanza.cpp  Stanza.h  main.cpp  main2.cpp
